force-app/main/default/objects/Device__c/Device__c.object-meta.xml
<CustomObject>
  <label>Device</label>
  <pluralLabel>Devices</pluralLabel>
  <nameField>
    <type>Text</type>
    <label>Device Name</label>
  </nameField>
  <sharingModel>ReadWrite</sharingModel>
  <description>Portable electronic devices for inventory management</description>
</CustomObject>