force-app/main/default/objects/Device__c/fields/Last_Restocked__c.field-meta.xml
<CustomField>
    <fullName>Last_Restocked__c</fullName>
    <label>Last Restocked</label>
    <description>The date when this device was last restocked. Used for inventory tracking and reorder frequency analysis.</description>
    <inlineHelpText>Automatically updated when stock levels are increased. Used for tracking inventory turnover and planning future orders.</inlineHelpText>
    <type>Date</type>
</CustomField>