force-app/main/default/objects/Device__c/fields/Minimum_Stock_Level__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Stock_Level__c</fullName>
    <label>Minimum Stock Level</label>
    <description>The minimum stock level before reordering is required. Used for automated low stock alerts and inventory management.</description>
    <inlineHelpText>Set the minimum quantity that should trigger reordering alerts. When stock falls below this level, the system will generate low stock notifications.</inlineHelpText>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>10</defaultValue>
</CustomField>