force-app/main/default/objects/Device__c/fields/Price__c.field-meta.xml
<CustomField>
  <fullName>Price__c</fullName>
  <label>Price</label>
  <type>Currency</type>
  <precision>18</precision>
  <scale>2</scale>
</CustomField>