force-app/main/default/objects/Device__c/fields/Profit_Margin__c.field-meta.xml
<CustomField>
    <fullName>Profit_Margin__c</fullName>
    <formula>IF(BLANKVALUE(Cost_Price__c, 0) > 0, 
    ((Price__c - Cost_Price__c) / Price__c) * 100, 
    0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profit Margin (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>