force-app/main/default/objects/Device__c/fields/Stock_Quantity__c.field-meta.xml
<CustomField>
  <fullName>Stock_Quantity__c</fullName>
  <label>Stock Quantity</label>
  <type>Number</type>
  <precision>18</precision>
  <scale>0</scale>
</CustomField>