force-app/main/default/objects/Device__c/fields/Stock_Status__c.field-meta.xml
<CustomField>
    <fullName>Stock_Status__c</fullName>
    <label>Stock Status</label>
    <description>Automatically calculated status based on current stock levels compared to minimum thresholds. Used for quick visual identification of inventory status.</description>
    <inlineHelpText>Automatically updated by system triggers based on stock quantity vs. minimum levels. Green = In Stock, Yellow = Low Stock, Red = Out of Stock.</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Stock</fullName>
                <default>true</default>
                <label>In Stock</label>
            </value>
            <value>
                <fullName>Low Stock</fullName>
            </value>
            <value>
                <fullName>Out of Stock</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>