force-app/main/default/objects/Device__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <label>Supplier</label>
    <referenceTo>Supplier__c</referenceTo>
    <relationshipLabel>Devices</relationshipLabel>
    <relationshipName>Devices</relationshipName>
    <type>Lookup</type>
</CustomField>