force-app/main/default/objects/Device__c/recordTypes/Accessory_Item.recordType-meta.xml
<RecordType>
    <fullName>Accessory_Item</fullName>
    <active>true</active>
    <description>Record type for accessories and peripheral items</description>
    <label>Accessory Item</label>
</RecordType>