force-app/main/default/objects/Device__c/recordTypes/Hardware_Device.recordType-meta.xml
<RecordType>
    <fullName>Hardware_Device</fullName>
    <active>true</active>
    <description>Record type for physical hardware devices like computers, servers, networking equipment</description>
    <label>Hardware Device</label>
    <layoutAssignments>
        <layout>Device__c-Device Layout</layout>
    </layoutAssignments>
</RecordType>