force-app/main/default/objects/Device__c/recordTypes/Software_License.recordType-meta.xml
<RecordType>
    <fullName>Software_License</fullName>
    <active>true</active>
    <description>Record type for software licenses and digital products</description>
    <label>Software License</label>
</RecordType>