force-app/main/default/objects/Device__c/validationRules/Logical_Stock_Levels.validationRule-meta.xml
<ValidationRule>
    <fullName>Logical_Stock_Levels</fullName>
    <active>true</active>
    <description>Ensures that Reorder Point is greater than or equal to Minimum Stock Level for logical inventory management</description>
    <errorConditionFormula>Reorder_Point__c &lt; Minimum_Stock_Level__c</errorConditionFormula>
    <errorMessage>Reorder Point must be greater than or equal to Minimum Stock Level. Please adjust these values to ensure logical inventory management.</errorMessage>
</ValidationRule>