force-app/main/default/objects/Device__c/validationRules/Positive_Cost_Price_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Positive_Cost_Price_Validation</fullName>
    <active>true</active>
    <description>Ensures that Device Cost Price is always positive and greater than zero</description>
    <errorConditionFormula>Cost_Price__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Cost_Price__c</errorDisplayField>
    <errorMessage>Device Cost Price must be greater than zero. Please enter a valid positive cost.</errorMessage>
</ValidationRule>