force-app/main/default/objects/Device__c/validationRules/Positive_Price_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Positive_Price_Validation</fullName>
    <active>true</active>
    <description>Ensures that Device Price is always positive and greater than zero</description>
    <errorConditionFormula>Price__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Price__c</errorDisplayField>
    <errorMessage>Device Price must be greater than zero. Please enter a valid positive price.</errorMessage>
</ValidationRule>