force-app/main/default/objects/Device__c/listViews/Active_Devices_Dashboard.listView-meta.xml
<ListView>
    <fullName>Active_Devices_Dashboard</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Stock_Quantity__c</columns>
    <columns>Price__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Active Devices - Dashboard View</label>
    <language>en_US</language>
</ListView>