force-app/main/default/objects/Device__c/listViews/Low_Stock_Alert.listView-meta.xml
<ListView>
    <fullName>Low_Stock_Alert</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Stock_Quantity__c</columns>
    <columns>Price__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stock_Quantity__c</field>
        <operation>lessThan</operation>
        <value>10</value>
    </filters>
    <label>Low Stock Alert</label>
    <language>en_US</language>
</ListView>